--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.svg",
     "start": "npm run lint && npm run dev",
     "dev": "tsc && vite --port 1301 --mode localdev",
-    "build": "npm run fw-init && npm run build:prod",
+    "build": "npm run build:prod",
     "build:dev": "npm run lint && tsc && vite build --mode development",
     "build:dev-local": "npm run lint && tsc && vite build --mode localdev",
     "build:prod": "npm run lint && tsc && vite build --mode production",
@@ -42,6 +43,7 @@
     "@types/validator": "^13.11.8",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
+    "@vite-pwa/assets-generator": "^0.2.4",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
@@ -50,6 +52,7 @@
     "sass": "^1.72.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-pwa": "^0.20.1"
   }
 }
