--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ckeditor/ckeditor5-react": "^8.0.0",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
+    "boring-avatars": "^1.10.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.11",
