--- a/env/.env.development
+++ b/env/.env.development
@@ -1,5 +1,5 @@
 VITE_APP_TITLE="Vg App Portal"
 VITE_APP_VERSION="0.0.1 - DEV"
 VITE_APP_ENV="Development"
-VITE_APP_REALM="vetgo-01"
+VITE_APP_REALM="browser-task"
 VITE_APP_BASE_URL="https://api.moonpet.vn"
