--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dexie": "^4.0.8",
     "express": "^4.19.1",
     "firebase": "^10.12.4",
+    "json5": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
