--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.26.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
+    "sonner": "^1.5.0",
     "tsyringe": "^4.8.0",
     "uuid": "^10.0.0",
     "validator": "^13.11.0",
