--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "^5.3.7",
     "@ckeditor/ckeditor5-build-classic": "^42.0.0",
     "@ckeditor/ckeditor5-react": "^8.0.0",
+    "@react-keycloak/web": "^3.4.0",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
     "boring-avatars": "^1.10.2",
@@ -27,6 +28,7 @@
     "dexie": "^4.0.8",
     "express": "^4.19.1",
     "firebase": "^10.12.4",
+    "keycloak-js": "^25.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
