--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,9 @@
         }
     },
     "rules": {
+        "react/react-in-jsx-scope": "off",
+    // allow jsx syntax in js files (for next.js project)
+   "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }], //should add ".ts" if typescript project
         "semi": "off",
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/semi": [
